--- a/docs-api/Jenkinsfile
+++ b/docs-api/Jenkinsfile
@@ -35,7 +35,7 @@ pipeline {
                 echo "BUILD -- ${BUILD}"
                 echo "DEPLOY -- ${DEPLOY}" 
                 echo "version -- ${pomVersion}"    
-                sh "mvn clean test"                
+                sh "mvn clean test install"                
             }
         }
         stage('Build image') {
@@ -44,7 +44,7 @@ pipeline {
             }
             steps {
             	echo "version -- ${REGISTRY}" 
-                sh "mvn compile jib:build -Dimage=${REGISTRY}:${pomVersion} -DskipTests -Djib.to.auth.username=agatalba -Djib.to.auth.password=agat1978#"                
+                sh "mvn -f docs-api/pom.xml compile com.google.cloud.tools:jib-maven-plugin:3.2.0:build -Dimage=${REGISTRY}:${pomVersion} -DskipTests -Djib.to.auth.username=agatalba -Djib.to.auth.password=agat1978#"                
             }
         }  
         stage('Deploy into Kubernetes') {
