--- a/docs-api/src/main/resources/application.properties
+++ b/docs-api/src/main/resources/application.properties
@@ -19,9 +19,8 @@ mca.filesmanagement.docs.port.out.documentbinary.path=${DOCS_PATH:/home/agat/tem
 eventuatelocal.kafka.bootstrap.servers=${KAFKA_HOST:localhost}:${KAFKA_PORT:9092}
 eventuatelocal.zookeeper.connection.string=${ZOOKEEPER_HOST:localhost}:${ZOOKEEPER_PORT:2181}
 
-#eventuatelocal.zookeeper.connection.string=localhost:2181
-#eventuate.cdc.type=EventuateTram
-#spring.profiles.active=RabbitMQ
-#rabbitmq.broker.addresses=localhost:5672
-#rabbitmq.host=localhost
-#rabbitmq.port=5672
+# Flyway configuration
+spring.flyway.enabled=true
+spring.flyway.location=classpath:/db/migration
+spring.flyway.schema=DOCS
+spring.flyway.flyway.baseline-on-migrate=true
