--- a/docs-api/pom.xml
+++ b/docs-api/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>docs</groupId>
 		<artifactId>docs</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>1.0.2</version>
 	</parent>
 
 	<properties>
@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>mca.filesmanagement</groupId>
 			<artifactId>docs-api-messaging</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${parent.version}</version>
 		</dependency>
 
 		<dependency>
