--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
 
 	<groupId>docs</groupId>
 	<artifactId>docs</artifactId>
-	<version>1.0.2-SNAPSHOT</version>
+	<version>1.0.2</version>
 	<packaging>pom</packaging>
 
-	<name>root-project</name>
-	<description>Root project</description>
+	<name>docs-root-project</name>
+	<description>Docs root project</description>
 	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
