--- a/docs-api-messaging/pom.xml
+++ b/docs-api-messaging/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>docs</groupId>
 		<artifactId>docs</artifactId>
-		<version>1.0.2</version>
+		<version>1.0.3-SNAPSHOT</version>
 	</parent>	
 
 	<properties>
