--- a/pom.xml
+++ b/pom.xml
@@ -21,13 +21,13 @@
 		<repository>
 			<id>release-artifacts-repository</id>
 			<name>Artifactory para dependencias Release</name>
-			<url>http://localhost:8101/artifactory/libs-release/</url>
+			<url>http://artifactory:8101/artifactory/libs-release/</url>
 			<layout>default</layout>
 		</repository>
 		<snapshotRepository>
 			<id>snapshot-artifacts-repository</id>
 			<name>Artifactory para dependencias snapshot</name>
-			<url>http://localhost:8101/artifactory/libs-snapshot/</url>
+			<url>http://artifactory:8101/artifactory/libs-snapshot/</url>
 			<layout>default</layout>
 		</snapshotRepository>
 	</distributionManagement>
