--- a/docs-api-messaging/pom.xml
+++ b/docs-api-messaging/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>docs</groupId>
 		<artifactId>docs</artifactId>
-		<version>1.0.6</version>
+		<version>1.0.7-SNAPSHOT</version>
 	</parent>	
 
 	<properties>
