--- a/docs-api-messaging/pom.xml
+++ b/docs-api-messaging/pom.xml
@@ -9,17 +9,14 @@
 	</parent>	
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>17</java.version>
-		<maven.compiler.source>17</maven.compiler.source>
-		<maven.compiler.target>17</maven.compiler.target>
+		<eventuate-commands-version>0.29.0.RELEASE</eventuate-commands-version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>io.eventuate.tram.core</groupId>
 			<artifactId>eventuate-tram-spring-commands</artifactId>
-			<version>0.29.0.RELEASE</version>
+			<version>${eventuate-commands-version}</version>
 		</dependency>
 	</dependencies>
 </project>
