--- a/docs-api/pom.xml
+++ b/docs-api/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>docs</groupId>
 		<artifactId>docs</artifactId>
-		<version>1.0.10-SNAPSHOT</version>
+		<version>1.0.11</version>
 	</parent>
 
 	<properties>
