--- a/docs-api-messaging/pom.xml
+++ b/docs-api-messaging/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>docs</groupId>
 		<artifactId>docs</artifactId>
-		<version>1.0.17-SNAPSHOT</version>
+		<version>1.0.18/version>
 	</parent>
 
 	<properties>
