--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>docs</groupId>
 	<artifactId>docs</artifactId>
-    <version>1.0.17-SNAPSHOT</version>
+    <version>1.0.18</version>
 	<packaging>pom</packaging>
 
 	<name>docs-root-project</name>
